# options

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: main.py
src/env/: env.py
src/options/: __init__.py  agent.py  options.py
src/planning/: README.md  __init__.py  hallway_options.py  svi_planner.py
src/qlearning/: __init__.py  agent.py  qlearning.py
tests/: plot_efficiency_metrics.py  plot_mixed_comparison.py  test_smdp_backup.py
