[tool.poetry]
name = "options"
version = "0.1.0"
description = ""
authors = ["TristanBester <tristanbester@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.12.0"
numpy = "^1.26.2"
tqdm = "^4.66.1"
matplotlib = "^3.8.2"
gymnasium = "^0.29.1"
termcolor = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
