[tool.poetry]
name = "options"
version = "0.1.0"
description = ""
authors = ["TristanBester <tristanbester@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.12.0"
numpy = "^1.26.2"
tqdm = "^4.66.1"
matplotlib = "^3.8.2"
gymnasium = "^0.29.1"
termcolor = "^2.4.0"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pylint.MASTER]
disable=["C0114", "R0903", "C0103", "R0914", "W0613"]

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__",
]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType=false
reportUnknownArgumentType=false 
reportUnknownParameterType=false
reportGeneralTypeIssues=false
pythonVersion = "3.11"
pythonPlatform = "Linux"

[tool.isort]
profile = "black"
py_version=311
line_length=88


[tool.poetry.group.dev.dependencies]
isort = "^5.13.1"
pylint = "^3.0.3"
pylance = "^0.8.20"
pyright = "^1.1.340"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
